# prediccion_warping_clasificacion

./: .gitignore  AGENTS.md  CHANGELOG.md  CHECKLIST_DEFENSA.txt  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DESCUBRIMIENTOS_GEOMETRICOS.md  FISHER_DEFENSE_NOTES.md  FISHER_EXPERIMENT_README.md  GEMINI.md  GROUND_TRUTH.json  LICENSE  MANIFEST.in  PLAN_VALIDACION_EXTERNA.md  PROMPT_CONTINUACION_SESION_53.md  PROMPT_CONTINUACION_SESION_55.md  README.md  README_PORTABLE_WINDOWS.txt  README_USUARIO.txt  RELEASE_NOTES_v1.0.10.md  REPORTE_SESION_26.md  REPRO_ENSEMBLE_3_71.md  RESULTADOS_SESION36.md  RESULTADOS_SESION37.md  RESUMEN_PLAN_SESIONES_36-41.md  SESION_25_REPORTE.md  WINDOWS_STANDALONE_SUMMARY.md  install.bat  install.sh  prompt_tesis.md  pyproject.toml  referencia_auditoria.md  requirements.txt  run_demo.bat  run_demo.sh  study_pca_real_data.py  study_variance_visual.py  thesis_fisher_tutorial.py  thesis_optimization_fisher.py  (+5 more)
.venv_build/: pyvenv.cfg
Tesis/: .gitignore  10-Justificacion.tex  11-MarcoTeorico.tex  6-Diagrama.tex  8-Introduccion.tex  9-Hipotesis.tex  PROMPT_SESION_02.md  PROMPT_SESION_02_PREMIUM.md  main.tex  title-page.tex
audit/: INFORME_AUDITORIA_JURADO.md  MASTER_PLAN.md  OUTPUTS_CLEANUP_20251227.md  REFERENCE_INDEX.md  outputs_inventory.csv
configs/: classifier_original_base.json  classifier_warped_base.json  classifier_warped_sahs_masked.json  cropping_10.json  ensemble_best.json  final_config.json  hierarchical_train_base.json  landmarks_train_base.json  warping_best.json
docs/: ANALISIS_CRITICO_SESION_55.md  ARCHIVE_LOG.md  BUILD_WINDOWS_STANDALONE.md  CHECKPOINTS_CLEANUP_REPORT.md  CONFIGS.md  EXPERIMENTS.md  FISHER_EXPERIMENT_README.md  GRADCAM_EXPLICACION.md  GUIA_COMPRENSION_PROYECTO.md  GUI_FILES_CREATED.md  GUI_IMPLEMENTATION.md  GUI_INDEX.md  GUI_MANUAL_TEST_CHECKLIST.md  INTROSPECCION_SESION_30.md  INTROSPECCION_SESION_31.md  PLAN_IMPLEMENTACION_CLI_v2.md  PLAN_WARPING_AGENT.md  PROMPT_CONTINUACION_SESION_25.md  PROMPT_CONTINUACION_SESION_27.md  PROMPT_CONTINUACION_SESION_28.md  PROMPT_CONTINUACION_SESION_30.md  PROMPT_CONTINUACION_SESION_32.md  PR_WARPING_SUMMARY.md  QUICKSTART_LANDMARKS.md  QUICKSTART_WARPING.md  README.md  REFERENCIA_EXPERIMENTOS_ORIGINALES.md  REFERENCIA_SESIONES_FUTURAS.md  REPRO_CLASSIFIER_RESNET18.md  REPRO_ENSEMBLE_3_71.md  REPRO_FULL_PIPELINE.md  (+5 more)
(+795 files in other folders)
